# PCTama

./: .editorconfig  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  DASHBOARD_TOKEN.md  FromLocalVocalText  INSTALL_DOTNET.md  LLM_LOGGING_IMPROVEMENTS.md  LOCALVOCAL_WEBSOCKET_ISSUE.md  OBS_LOCALVOCAL_SETUP.md  PCTama.sln  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUNNING.md  TOKEN_DISPLAY_CHANGES.md  build.bat  build.sh  test-file-monitoring.sh  test-localvocal.sh
.github/workflows/: build-and-test.yml  cmake.yml
.kanbn/: index.md
.kanbn/tasks/: actor-display.md  actor-sprites.md  controller-logic.md  real-time-text-input.md  text-input.md
src/: CMakeLists.txt
src/PCTama.ActorMCP/: App.axaml  App.axaml.cs  PCTama.ActorMCP.csproj  Program.cs  appsettings.json
src/PCTama.ActorMCP/Controllers/: ActorController.cs
src/PCTama.ActorMCP/Models/: ActorConfiguration.cs
src/PCTama.ActorMCP/Services/: ActorService.cs
src/PCTama.ActorMCP/ViewModels/: ActorWindowViewModel.cs
src/PCTama.ActorMCP/Views/: ActorWindow.axaml  ActorWindow.axaml.cs
src/PCTama.AppHost/: PCTama.AppHost.csproj  Program.cs  appsettings.json
src/PCTama.Controller/: PCTama.Controller.csproj  Program.cs  appsettings.json
src/PCTama.Controller/Controllers/: ControllerController.cs
src/PCTama.Controller/Models/: McpConfiguration.cs
src/PCTama.ServiceDefaults/: Extensions.cs
src/PCTama.TextMCP/: FromLocalVocalText  PCTama.TextMCP.csproj  Program.cs  appsettings.json
tests/: CMakeLists.txt
tests/PCTama.Tests/: PCTama.Tests.csproj  appsettings.test.json
(+10 files in other folders)
